fix: adjust topbar-menu z-index

--- a/app/assets/stylesheets/css/app.css
+++ b/app/assets/stylesheets/css/app.css
@@ -226,7 +226,7 @@
     top: 0;
     right: 0;
     left: 0;
-    z-index: 1057;
+    z-index: 1002;
     background-color: var(--vz-header-bg);
     -webkit-transition: all .1s ease-out;
     transition: all .1s ease-out
