--- a/app/assets/stylesheets/css/custom.css
+++ b/app/assets/stylesheets/css/custom.css
@@ -58,7 +58,7 @@ border:1px solid #7367F0 !important;
 } */
 
 .popover {
-  z-index: 1056!important;
+  z-index: 1001!important;
 }
 
 .popover-body {
